[package]
name = "ry"
version = "0.1.1"
authors = ["Will Deuschle <wjdeuschle@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["yaml"]
description = "rusty yaml searching"
homepage = "https://github.com/willdeuschle/ry"
repository = "https://github.com/willdeuschle/ry"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
clap = "2"
log = "0.4"
